--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -1,14 +1,27 @@
 <resources>
-    <string name="app_name">ND940C3-Project</string>
+    <string name="app_name">LoadApp</string>
     <string name="app_description">Download files from Internet</string>
     <string name="action_settings">Settings</string>
 
+    <string name="image_download_description">Image of download</string>
+    <string name="button_glide">Glide - Image Loading Library by BumpTech</string>
+    <string name="button_load_app">LoadAp - Current repository by Udacity</string>
+    <string name="button_retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
 
-    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
-    <string name="notification_description">The Project 3 repository is downloaded</string>
+    <string name="notification_title">LoapAp: Download file</string>
+    <string name="notification_description">The %s is downloaded</string>
     <string name="notification_button">See changes</string>
+    <string name="notification_channel_id" translatable="false">load_app_channel</string>
+    <string name="notification_channel_name" translatable="true">LoadAp</string>
 
-    <string name="button_name">Click me</string>
+    <string name="button_ok">OK</string>
+    <string name="button_name">Download</string>
     <string name="button_loading">We are loading </string>
     <string name="title_activity_detail">DetailActivity</string>
+    <string name="no_url_selected">Please select the file to download</string>
+    <string name="file_name_text">File name:</string>
+    <string name="status_label">Status:</string>
+    <string name="status_success">Success</string>
+    <string name="status_failed">Failed</string>
+
 </resources>
